<resources>
    <string name="app_name">Productos</string>
    <string name="add_product">Añadir a la lista</string>
    <string name="add_product_to_list">Añadir producto</string>
    <string name="action_settings">Configuración</string>
    <string name="confirm">Aceptar</string>
    <string name="delete">Eliminar</string>
    <string name="description">Descripción</string>
    <string name="edit_list">Lista</string>
    <string name="edit_product">Editar producto</string>
    <string name="send_mail">Enviar por correo</string>
    <string name="send_sms">Enviar por SMS</string>
    <string name="edit_product_sl">Editar lista de compra</string>
    <string name="edit_quantity">Fijar cantidad</string>
    <string name="euro">€</string>
    <string name="kg">kg</string>
    <string name="menu_delete">Borrar producto</string>
    <string name="menu_delete_sl">Borrar lista de compra</string>
    <string name="menu_insert_list">Nueva lista</string>
    <string name="menu_insert_prod">Nuevo producto</string>
    <string name="menu_insert_sl">Nueva lista</string>
    <string name="menu_order_prod_name">Ordenar por nombre</string>
    <string name="menu_order_prod_price">Ordenar por precio</string>
    <string name="menu_order_prod_weight">Ordenar por peso</string>
    <string name="menu_shopping_lists">Listas de Compra</string>
    <string name="prueba_unitaria">Test unitario</string>
    <string name="prueba_volumen">Test volumen</string>
    <string name="prueba_sobrecarga">Test sobrecarga</string>
    <string name="name">Nombre</string>
    <string name="no_notes">Sin productos</string>
    <string name="price">Precio</string>
    <string name="shopping_list_name">Listas de compra</string>
    <string name="title_activity_add_product">Añadir producto a la lista</string>
    <string name="title_activity_product_edit">Editar producto</string>
    <string name="title_activity_shoppingList_edit">Editar lista de compra</string>
    <string name="weight">Peso</string>
</resources>
