<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Nombre"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:textSize="15sp"/>
        <EditText android:id="@+id/nameSL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:enabled="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/weight"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:gravity="end" />
        <EditText android:id="@+id/title_weight"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:text="@string/kg"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:gravity="start" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/price"
            android:layout_width="0dp"
            android:layout_weight="0.30"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"
            android:gravity="end" />

        <EditText android:id="@+id/title_price"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
        <TextView
            android:text="@string/euro"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:gravity="start" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/description"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Describa su producto..."
            android:layout_marginLeft="16dp"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_gravity="start"/>
        <Button android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="end"/>
    </LinearLayout>

</LinearLayout>